changed port for client and server

--- a/client/angular.json
+++ b/client/angular.json
@@ -62,7 +62,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "everest:build"
+            "browserTarget": "everest:build",
+            "port": 4444
           },
           "configurations": {
             "production": {
