--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
+    "ngx-autosize": "^1.6.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
