--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,9 @@
   },
   "homepage": "https://github.com/rajsaha/everest_v2#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "mongoose": "^5.5.7",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
