--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/rajsaha/everest_v2#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "mongoose": "^5.5.7",
