--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -17,6 +17,10 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@environments/*": ["src/environments/*"],
+      "@services/*": ["src/app/services/*"]
+    }
   }
 }
