--- a/server/package.json
+++ b/server/package.json
@@ -33,7 +33,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.7",
     "morgan": "^1.9.1",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "open-graph-scraper": "^3.6.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
