--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,16 @@
 {
-    "type": "node",
-    "request": "launch",
-    "name": "Launch Program",
-    "protocol": "inspector",
-    "runtimeExecutable": "nodemon",
-    "runtimeArgs": [
-        "--inspect=4000"
-    ],
-    "program": "${workspaceFolder}/server/server.js",
-    "port": 4000,
-    "restart": true,
-    "env": {
-        "BABEL_DISABLE_CACHE": "1",
-        "NODE_ENV": "development"
-    },
-    "console": "integratedTerminal",
-    "internalConsoleOptions": "neverOpen"
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Node: Nodemon",
+            "processId": "${command:PickProcess}",
+            "restart": true,
+            "protocol": "inspector",
+        },
+    ]
 }
