--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,19 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "chrome",
+            "request": "launch",
+            "name": "Launch Chrome",
+            "url": "http://localhost:4444",
+            "webRoot": "${workspaceFolder}/client"
+        },
+        {
             "type": "node",
             "request": "attach",
             "name": "Node: Nodemon",
             "processId": "${command:PickProcess}",
             "restart": true,
             "protocol": "inspector",
-        },
+        }
     ]
 }
