--- a/client/angular.json
+++ b/client/angular.json
@@ -27,7 +27,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/styles/everest-theme.scss"
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -85,6 +86,9 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              {
+                "input": "src/assets/styles/everest-theme.scss"
+              },
               "src/styles.scss"
             ],
             "scripts": [],
