--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
     "ngx-autosize": "^1.6.3",
+    "ngx-infinite-scroll": "^8.0.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
