--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-extensions/password-strength": "^4.0.1",
     "@angular/animations": "^8.1.0",
     "@angular/cdk": "^7.3.7",
     "@angular/common": "~8.1.0",
