--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
     "@ckeditor/ckeditor5-angular": "^1.1.0",
-    "@ckeditor/ckeditor5-build-classic": "^12.4.0",
+    "@ckeditor/ckeditor5-build-balloon": "^12.4.0",
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-regular-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "bootstrap": "^4.3.1",
+    "ckeditor-cloudinary-uploader-adapter": "^1.1.3",
     "core-js": "^2.6.9",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
