--- a/package.json
+++ b/package.json
@@ -23,13 +23,11 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
-    "@ckeditor/ckeditor5-angular": "^1.1.0",
-    "@ckeditor/ckeditor5-build-balloon": "^12.4.0",
-    "@ckeditor/ckeditor5-upload": "^12.0.0",
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-regular-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@tinymce/tinymce-angular": "^3.3.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.9",
     "express": "^4.17.1",
