--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
     "rxjs": "~6.5.2",
+    "tinymce": "^4.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
