--- a/package.json
+++ b/package.json
@@ -12,50 +12,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-material-extensions/password-strength": "^4.0.1",
-    "@angular/animations": "^8.1.0",
+    "@angular-material-extensions/password-strength": "^4.1.2",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "~8.1.0",
-    "@angular/compiler": "~8.1.0",
-    "@angular/core": "~8.1.0",
-    "@angular/forms": "~8.1.0",
+    "@angular/common": "^8.1.3",
+    "@angular/compiler": "^8.1.3",
+    "@angular/core": "^8.1.3",
+    "@angular/forms": "^8.1.3",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "~8.1.0",
-    "@angular/platform-browser-dynamic": "~8.1.0",
-    "@angular/router": "~8.1.0",
+    "@angular/platform-browser": "^8.1.3",
+    "@angular/platform-browser-dynamic": "^8.1.3",
+    "@angular/router": "^8.1.3",
     "@fortawesome/angular-fontawesome": "^0.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.19",
-    "@fortawesome/free-regular-svg-icons": "^5.9.0",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-regular-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@tinymce/tinymce-angular": "^3.3.1",
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.6.9",
+    "bootstrap": "^4.4.1",
+    "core-js": "^2.6.11",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
-    "ngx-autosize": "^1.6.3",
-    "ngx-infinite-scroll": "^8.0.0",
+    "ngx-autosize": "^1.7.2",
+    "ngx-infinite-scroll": "^8.0.1",
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
-    "rxjs": "~6.5.2",
-    "tinymce": "^4.5.3",
+    "rxjs": "^6.5.4",
+    "tinymce": "^4.9.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.0",
-    "@angular/cli": "~8.1.0",
-    "@angular/compiler-cli": "~8.1.0",
-    "@angular/language-service": "~8.1.0",
+    "@angular-devkit/build-angular": "^0.803.23",
+    "@angular/cli": "^8.1.3",
+    "@angular/compiler-cli": "^8.1.3",
+    "@angular/language-service": "^8.1.3",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
