--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   "private": true,
   "dependencies": {
     "@angular-material-extensions/password-strength": "^4.1.2",
-    "@angular/animations": "^8.2.14",
+    "@angular/animations": "^9.0.0-rc.11",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
+    "@angular/common": "^9.0.0-rc.11",
+    "@angular/compiler": "^9.0.0-rc.11",
+    "@angular/core": "^9.0.0-rc.11",
+    "@angular/forms": "^9.0.0-rc.11",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular/platform-browser": "^9.0.0-rc.11",
+    "@angular/platform-browser-dynamic": "^9.0.0-rc.11",
+    "@angular/router": "^9.0.0-rc.11",
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-regular-svg-icons": "^5.12.0",
@@ -39,17 +39,17 @@
     "rxjs": "^6.5.4",
     "tinymce": "^4.9.7",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.23",
-    "@angular/cli": "^8.3.23",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.900.0-rc.10",
+    "@angular/cli": "^9.0.0-rc.10",
+    "@angular/compiler-cli": "^9.0.0-rc.11",
+    "@angular/language-service": "^9.0.0-rc.11",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.2.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
@@ -60,7 +60,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.7.5"
   },
   "engines": {
     "node": "~10.15.0",
