--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
     "@angular-material-extensions/password-strength": "^4.1.2",
     "@angular/animations": "^9.0.0-rc.11",
-    "@angular/cdk": "^7.3.7",
+    "@angular/cdk": "^9.0.0-rc.8",
     "@angular/common": "^9.0.0-rc.11",
     "@angular/compiler": "^9.0.0-rc.11",
     "@angular/core": "^9.0.0-rc.11",
     "@angular/forms": "^9.0.0-rc.11",
-    "@angular/material": "^7.3.7",
+    "@angular/material": "^9.0.0-rc.8",
     "@angular/platform-browser": "^9.0.0-rc.11",
     "@angular/platform-browser-dynamic": "^9.0.0-rc.11",
     "@angular/router": "^9.0.0-rc.11",
@@ -30,7 +31,6 @@
     "bootstrap": "^4.4.1",
     "core-js": "^2.6.11",
     "express": "^4.17.1",
-    "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
     "ngx-autosize": "^1.7.2",
     "ngx-infinite-scroll": "^8.0.1",
