--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "request": "launch",
             "name": "Launch Chrome",
             "url": "http://localhost:4444",
-            "webRoot": "${workspaceFolder}/client"
+            "webRoot": "${workspaceFolder}"
         },
         {
             "type": "node",
