--- a/package.json
+++ b/package.json
@@ -13,51 +13,51 @@
   "private": true,
   "dependencies": {
     "@angular-material-extensions/password-strength": "^4.1.2",
-    "@angular/animations": "^9.0.0-rc.11",
-    "@angular/cdk": "^9.0.0-rc.8",
-    "@angular/common": "^9.0.0-rc.11",
-    "@angular/compiler": "^9.0.0-rc.11",
-    "@angular/core": "^9.0.0-rc.11",
-    "@angular/forms": "^9.0.0-rc.11",
-    "@angular/material": "^9.0.0-rc.8",
-    "@angular/platform-browser": "^9.0.0-rc.11",
-    "@angular/platform-browser-dynamic": "^9.0.0-rc.11",
-    "@angular/router": "^9.0.0-rc.11",
+    "@angular/animations": "^9.1.9",
+    "@angular/cdk": "^9.2.4",
+    "@angular/common": "^9.1.9",
+    "@angular/compiler": "^9.1.9",
+    "@angular/core": "^9.1.9",
+    "@angular/forms": "^9.1.9",
+    "@angular/material": "^9.2.4",
+    "@angular/platform-browser": "^9.1.9",
+    "@angular/platform-browser-dynamic": "^9.1.9",
+    "@angular/router": "^9.1.9",
     "@fortawesome/angular-fontawesome": "^0.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-regular-svg-icons": "^5.12.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@tinymce/tinymce-angular": "^3.3.1",
-    "bootstrap": "^4.4.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@tinymce/tinymce-angular": "^3.6.0",
+    "bootstrap": "^4.5.0",
     "core-js": "^2.6.11",
     "express": "^4.17.1",
-    "moment": "^2.24.0",
-    "ngx-autosize": "^1.7.2",
-    "ngx-infinite-scroll": "^8.0.1",
+    "moment": "^2.26.0",
+    "ngx-autosize": "^1.8.0",
+    "ngx-infinite-scroll": "^8.0.2",
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
-    "rxjs": "^6.5.4",
-    "tinymce": "^4.9.7",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "rxjs": "^6.5.5",
+    "tinymce": "^4.9.10",
+    "tslib": "^1.13.0",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.10",
-    "@angular/cli": "^9.0.0-rc.10",
-    "@angular/compiler-cli": "^9.0.0-rc.11",
-    "@angular/language-service": "^9.0.0-rc.11",
+    "@angular-devkit/build-angular": "^0.901.7",
+    "@angular/cli": "^9.1.7",
+    "@angular/compiler-cli": "^9.1.9",
+    "@angular/language-service": "^9.1.9",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "@types/node": "^12.12.44",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.6",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.7.5"
