--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,7 @@
               "src/styles.scss",
               "src/assets/styles/everest-theme.scss"
             ],
-            "scripts": [],
-            "es5BrowserSupport": true
+            "scripts": []
           },
           "configurations": {
             "production": {
