--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-regular-svg-icons": "^5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@ngrx/store": "^10.0.0",
     "@tinymce/tinymce-angular": "^3.6.1",
     "bootstrap": "^4.5.0",
     "core-js": "^2.6.11",
