working on no image post type

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.17.1",
     "moment": "^2.27.0",
     "ngx-autosize": "^1.8.0",
+    "ngx-color": "^6.0.2",
     "ngx-infinite-scroll": "^8.0.2",
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
