--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,9 @@
       ],
       "@assets/*": [
         "src/assets"
+      ],
+      "@models/*": [
+        "src/app/models/*"
       ]
     }
   }
