--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@ngrx/store": "^10.0.0",
-    "@tinymce/tinymce-angular": "^3.6.1",
     "bootstrap": "^4.5.2",
+    "compression": "^1.7.4",
     "core-js": "^2.6.11",
     "express": "^4.17.1",
     "moment": "^2.29.0",
