fixed ngrx double api call

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@ngrx/effects": "^10.0.1",
     "@ngrx/store": "^10.0.0",
     "bootstrap": "^4.5.2",
     "compression": "^1.7.4",
