--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod --build-optimizer && gzipper compress ./dist"
+    "postinstall": "ng build --prod --aot --vendor-chunk --common-chunk --delete-output-path --buildOptimizer"
   },
   "private": true,
   "dependencies": {
@@ -40,7 +40,6 @@
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
     "rxjs": "^6.6.3",
-    "tinymce": "^4.9.11",
     "tslib": "^1.13.0",
     "zone.js": "^0.10.3"
   },
@@ -53,7 +52,6 @@
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.12.62",
     "codelyzer": "^5.2.2",
-    "gzipper": "^4.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
