--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --prod --aot=true --vendor-chunk --common-chunk --delete-output-path --buildOptimizer=true"
+    "heroku-postbuild": "ng build --prod --aot=true --vendor-chunk --common-chunk --delete-output-path --buildOptimizer=true"
   },
   "private": true,
   "dependencies": {
