--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@ngrx/effects": "^10.0.1",
     "@ngrx/store": "^10.0.0",
+    "@ngx-meta/core": "^9.0.0",
     "bootstrap": "^4.5.2",
     "compression": "^1.7.4",
     "core-js": "^2.6.11",
