--- a/package.json
+++ b/package.json
@@ -29,13 +29,11 @@
     "@ngrx/effects": "^10.0.1",
     "@ngrx/store": "^10.0.1",
     "@ngx-meta/core": "^9.0.0",
-    "bootstrap": "^4.5.2",
     "compression": "^1.7.4",
     "core-js": "^2.6.11",
+    "dayjs": "^1.9.6",
     "express": "^4.17.1",
-    "moment": "^2.29.0",
     "ngx-autosize": "^1.8.0",
-    "ngx-color": "^6.0.3",
     "ngx-color-picker": "^10.1.0",
     "ngx-infinite-scroll": "^8.0.2",
     "normalize.css": "^8.0.1",
