--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "core-js": "^2.6.11",
     "dayjs": "^1.9.6",
     "express": "^4.17.1",
+    "ng-recaptcha": "^6.1.0",
     "ngx-autosize": "^1.8.0",
     "ngx-color-picker": "^10.1.0",
     "ngx-infinite-scroll": "^8.0.2",
